# gTTS

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGES.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  main.py  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  setup.cfg  setup.py  token-script.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: autolock.yml  build.yml  codecov.yml  full-test.yml  main.yml  pr.yml  publish.yml  push.yml  quick-test.yml  release.yml  test.yml  test_fast.yml  test_full.yml  test_quick.yml  update_langs.yml
docs/: Makefile  cli.rst  conf.py  contributing.rst  index.rst  license.rst  module.rst  tokenizer.rst
gtts/: CHANGELOG.md  __init__.py  accents.py  cli.py  lang.py  langs.py  langs_main.py  server.py  string.py  token.py  tts.py  utils.py  version.py
gtts/gbe/: __init__.py  core.py
gtts/tests/: test_cli.py  test_lang.py  test_string.py  test_token.py  test_tts.py  test_tts_utils.py  test_utils.py
gtts/tokenizer/: __init__.py  core.py  pre_processors.py  symbols.py  tokenizer_cases.py
gtts/tokenizer/tests/: test_core.py  test_pre_processors.py  test_tokenizer_cases.py
news/: 119.doc  120.bugfix  122.misc  124.feature  126.feature  135.feature  156.bugfix  159.misc  163.doc  164.feature  166.doc  171.misc  173.misc  185.misc  197.bugfix  200.feature  203.feature  204.feature  204.misc  205.misc  213.bugfix  250.doc  251.misc  252.bugfix  255.bugfix  267.bugfix  267.feature  267.removal  270.removal
scripts/: check.py  check_langs.py  gen_langs.py  utils.py
