[project]
name = "gTTS"
description = "gTTS (Google Text-to-Speech), a Python library and CLI tool to interface with Google Translate text-to-speech API"
authors = [{name = "Pierre Nicolas Durette", email = "pndurette@gmail.com"}]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "gtts",
    "text to speech",
    "Google Translate",
    "TTS",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "requests ~= 2.28.0",
    "click ~= 8.1.3",
    "six ~= 1.16.0"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest ~= 7.1.3",
    "pytest-cov",
    "testfixtures",
    "mock"
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "sphinx-click"
]

[project.scripts]
gtts-cli = "gtts.cli:tts_cli"

[project.urls]
homepage = "https://github.com/pndurette/gTTS"
documentation = "https://gtts.readthedocs.io"
repository = "https://github.com/pndurette/gTTS"
changelog = "https://github.com/pndurette/gTTS/blob/main/CHANGELOG.rst"

[tool.setuptools.dynamic]
version = {attr = "gtts.version.__version__"}

# Package name (gTTS) differs from module name (gtts), help out automatic discovery
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
# [tool.setuptools.package-dir]
# gtts = "gTTS"

[tool.coverage.run]
omit = [
    "gtts/tests/*",
    "gtts/tokenizer/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "log.debug",
    "log.warning",
]

[tool.pytest.ini_options]
markers = ["net: marks tests that call use the net (using the URL endpoint, deselect with '-m \"not net\"')"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"