[project]
name = "gTTS"
version = "2.5.4"
description = "gTTS (Google Text-to-Speech), a Python library and CLI tool to interface with Google Translate text-to-speech API"
authors = [{name = "Pierre Nicolas Durette", email = "pndurette@gmail.com"}]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "gtts",
    "text to speech",
    "Google Translate",
    "TTS",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "requests >=2.27, <3",  # https://docs.python-requests.org/en/latest/community/updates/
    "click >=7.1, <8.2",    # https://click.palletsprojects.com/en/latest/changes/
]

# TODO: release-please [yet] doesn't support dynamic version for pyproject.toml
# https://github.com/googleapis/release-please/blob/909d310defdf24adfd4858bbe1604668c14ef77f/src/updaters/python/pyproject-toml.ts#L54
# dynamic = ["version"]
# [tool.setuptools.dynamic]
# version = {attr = "gtts.version.__version__"}

[project.optional-dependencies]
tests = [
    "pytest >= 7.1.3,< 8.5.0",
    "pytest-cov",
    "testfixtures",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "sphinx-click",
    "sphinx-mdinclude"
]

[project.scripts]
gtts-cli = "gtts.cli:tts_cli"

[project.urls]
homepage = "https://github.com/pndurette/gTTS"
documentation = "https://gtts.readthedocs.io"
repository = "https://github.com/pndurette/gTTS"
changelog = "https://github.com/pndurette/gTTS/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
# Tests support files
"gtts.tests.input_files" = ["*.txt"]

[tool.coverage.run]
omit = [
    "gtts/tests/*",
    "gtts/tokenizer/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "log.debug",
    "log.warning",
]

[tool.pytest.ini_options]
markers = ["net: marks tests that call use the net (using the URL endpoint, deselect with '-m \"not net\"')"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
