[metadata]
description = gTTS (Google Text-to-Speech), a Python library and CLI tool to interface with Google Translate's text-to-speech API


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/


[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  gtts/tests/*
  gtts/tokenizer/tests/*
  
[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  log.debug
  log.warning
