[metadata]
name = gTTS
description = gTTS (Google Text-to-Speech), a Python library and CLI tool to interface with Google Translate text-to-speech API
author = Pierre Nicolas Durette
author_email = pndurette@gmail.com
url = https://github.com/pndurette/gTTS
license = MIT
keywords = 
  gtts
  text to speech
  Google Translate
  TTS
classifiers =
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Operating System :: Unix
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries
  Topic :: Multimedia :: Sound/Audio :: Speech
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
setup_requires = 
  setuptools >= 38.6
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  six
  beautifulsoup4
  click
  requests
  gtts_token >= 1.1.3

[options.extras_require]
tests = 
  pytest >= 3.9
  pytest-cov
  flake8
  testfixtures
  mock
docs =
  sphinx 
  sphinx-autobuild
  sphinx_rtd_theme
  sphinx-click
  towncrier
  
[options.entry_points]
console_scripts =
  gtts-cli = gtts.cli:tts_cli

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
ignore = W605, W503, W504

[coverage:run]
cover_pylib = false
omit =
  */site-packages/*
  gtts/tests/*
  gtts/tokenizer/tests/*
  
[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  log.debug
  log.warning